--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,6 @@ Date: 2017-04-12
 Author: Akinobu Watanabe
 Maintainer: Akinobu Watanabe <akinopteryx@gmail.com>
 Description: Assess the fidelity of landmark-based geometric morphometric data.
-Depends: geomorph, vegan, R(>= 3.1.0)
+Depends: geomorph, MASS, vegan, R(>= 3.1.0)
 License: GPL (>=2)
 Encoding: UTF-8
